# congressional-summaries

./: .gitignore  README.md  _config.yml  digest.py  index.xml  pyproject.toml  requirements.txt  rss.xml  wsgi.py
.github/scripts/: rssgen.py
.github/workflows/: cicd.yaml  digest.yaml
dailyrecord/: __init__.py  blog.py  digest.py  schema.sql  track.py
dailyrecord/static/: robots.txt
dailyrecord/static/css/: style.css
dailyrecord/templates/: base.html
dailyrecord/templates/blog/: digest.html  index.html
summaries/: 2026-02-25.md  2026-02-26.md  2026-02-27.md  2026-02-28.md  2026-03-01.md  2026-03-02.md  2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-08.md  2026-03-09.md  2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-14.md  2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-03-31.md  2026-04-01.md  2026-04-02.md  2026-04-03.md  2026-04-04.md  2026-04-08.md  2026-04-11.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  (+43 more)
