[project]
name = "dailyrecord"
version = "1.0.0"
description = "congress-daily.com"
requires-python = ">=3.9,<3.13"
dependencies = [
    "anthropic==0.77.1",
    "click==8.1.8",
    "feedgen==1.0.0",
    "Flask==3.0.3",
    "Flask-SQLAlchemy==3.1.1",
    "Markdown==3.9",
    "requests==2.32.5",
    "SQLAlchemy==2.0.38",
    "user-agents==2.2.0",
    "uWSGI==2.0.28",
    "Werkzeug==3.1.3"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
